--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Calculator</title>
-    <!-- Bootstrap 5 CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <style>
-      /* Page fade‑in animation */
       @keyframes fadeIn {
         from {
           opacity: 0;
@@ -92,132 +90,103 @@
   </head>
   <body>
     <div class="card calculator p-3">
-      <div id="display" class="display mb-3" tabindex="0"></div>
+      <div id="display" class="display mb-3" tabindex="0">0</div>
       <div class="row g-2">
         <div class="col-3">
-          <button class="btn btn-cal btn-clear w-100" data-value="Escape">
+          <button
+            type="button"
+            class="btn btn-cal btn-clear w-100"
+            data-value="Escape"
+          >
             C
           </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal btn-op w-100" data-value="/">÷</button>
+          <button type="button" class="btn btn-cal btn-op w-100" data-value="/">
+            ÷
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal btn-op w-100" data-value="*">×</button>
+          <button type="button" class="btn btn-cal btn-op w-100" data-value="*">
+            ×
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal btn-op w-100" data-value="-">−</button>
+          <button type="button" class="btn btn-cal btn-op w-100" data-value="-">
+            −
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="7">7</button>
+          <button type="button" class="btn btn-cal w-100" data-value="7">
+            7
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="8">8</button>
+          <button type="button" class="btn btn-cal w-100" data-value="8">
+            8
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="9">9</button>
+          <button type="button" class="btn btn-cal w-100" data-value="9">
+            9
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal btn-op w-100" data-value="+">+</button>
+          <button type="button" class="btn btn-cal btn-op w-100" data-value="+">
+            +
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="4">4</button>
+          <button type="button" class="btn btn-cal w-100" data-value="4">
+            4
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="5">5</button>
+          <button type="button" class="btn btn-cal w-100" data-value="5">
+            5
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="6">6</button>
+          <button type="button" class="btn btn-cal w-100" data-value="6">
+            6
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal btn-equal w-100" data-value="Enter">
+          <button
+            type="button"
+            class="btn btn-cal btn-equal w-100"
+            data-value="Enter"
+          >
             =
           </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="1">1</button>
+          <button type="button" class="btn btn-cal w-100" data-value="1">
+            1
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="2">2</button>
+          <button type="button" class="btn btn-cal w-100" data-value="2">
+            2
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value="3">3</button>
+          <button type="button" class="btn btn-cal w-100" data-value="3">
+            3
+          </button>
         </div>
         <div class="col-6">
-          <button class="btn btn-cal w-100" data-value="0">0</button>
+          <button type="button" class="btn btn-cal w-100" data-value="0">
+            0
+          </button>
         </div>
         <div class="col-3">
-          <button class="btn btn-cal w-100" data-value=".">.</button>
+          <button type="button" class="btn btn-cal w-100" data-value=".">
+            .
+          </button>
         </div>
       </div>
     </div>
-
-    <script>
-      const display = document.getElementById("display");
-      const buttons = document.querySelectorAll(".btn-cal");
-      let expr = "";
-
-      const opSymbols = {
-        "/": "÷",
-        "*": "×",
-        "+": "+",
-        "-": "−",
-      };
-
-      function render() {
-        display.textContent = expr || "0";
-      }
-
-      function evaluate() {
-        try {
-          const val = Function("return " + expr)();
-          expr = val.toString();
-        } catch (_) {
-          expr = "";
-          alert("Invalid expression");
-        }
-        render();
-      }
-
-      function input(key) {
-        if (key === "Escape" || key === "c" || key === "C") {
-          expr = "";
-          return render();
-        }
-        if (key === "Backspace") {
-          expr = expr.slice(0, -1);
-          return render();
-        }
-        if (key === "Enter" || key === "=") return evaluate();
-
-        if (/^[0-9]$/.test(key) || key === ".") {
-          expr += key;
-        } else if (["/", "*", "-", "+"].includes(key)) {
-          expr += key;
-        }
-        render();
-      }
-
-      // Forward button clicks
-      buttons.forEach((btn) => {
-        btn.addEventListener("click", () => input(btn.dataset.value));
-      });
-
-      // Keyboard support
-      window.addEventListener("keydown", (e) => {
-        const k = e.key;
-        if (k === "Enter") e.preventDefault();
-        input(k);
-      });
-
-      // Show prettified operators in display
-      new MutationObserver(() => {
-        if (!expr) return;
-        let pretty = expr.replace(/[/*+-]/g, (m) => opSymbols[m]);
-        display.textContent = pretty;
-      }).observe(display, { childList: true });
-
-      render();
-    </script>
+    <script src="calc.js"></script>
   </body>
 </html>
