--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="img/icon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animated Calculator</title>
@@ -8,85 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <style>
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(30px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-
-      body {
-        background: radial-gradient(
-          circle at top right,
-          #4f46e5 0%,
-          #0ea5e9 100%
-        );
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        animation: fadeIn 0.6s ease both;
-        user-select: none;
-      }
-
-      .calculator {
-        --bs-card-bg: #ffffffee;
-        border-radius: 2rem !important;
-        box-shadow: 0 15px 35px rgba(0, 0, 0, 0.15);
-        backdrop-filter: blur(8px);
-        width: 340px;
-      }
-
-      .display {
-        height: 80px;
-        font-size: 2rem;
-        text-align: right;
-        padding: 0.75rem 1rem;
-        overflow: hidden;
-        white-space: nowrap;
-        background: #f8fafc;
-        border: 1px solid #e2e8f0;
-        border-radius: 1rem;
-      }
-
-      .btn-cal {
-        font-size: 1.35rem;
-        padding: 1rem 0;
-        border-radius: 1rem !important;
-        transition: transform 0.15s ease;
-      }
-
-      .btn-cal:active {
-        transform: scale(0.9);
-      }
-
-      .btn-op {
-        background: #6366f1;
-        color: #fff;
-      }
-      .btn-op:hover {
-        background: #4f46e5;
-      }
-      .btn-equal {
-        background: #10b981;
-        color: #fff;
-      }
-      .btn-equal:hover {
-        background: #059669;
-      }
-      .btn-clear {
-        background: #ef4444;
-        color: #fff;
-      }
-      .btn-clear:hover {
-        background: #dc2626;
-      }
-    </style>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <div class="card calculator p-3">
