--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="card calculator p-3">
@@ -110,6 +111,9 @@
         </div>
       </div>
     </div>
+    <footer class="text-center text-white-50 mt-4">
+      <p>Developed by Pradyumna</p>
+    </footer>
     <script src="calc.js"></script>
   </body>
 </html>
