--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
     <div class="card calculator p-3">
@@ -113,6 +113,6 @@
     <footer class="text-center text-white-50 mt-4">
       <p>Developed by Pradyumna</p>
     </footer>
-    <script src="calc.js"></script>
+    <script src="./src/calc.js"></script>
   </body>
 </html>
